# Manikin_Software_Libraries_V3

./: .clang-format  .gitignore  404.html  CMakeLists.txt  Kconfig  README.md  index.html  mkdocs.yml
.devcontainer/: Dockerfile
.github/workflows/: build_workflow.yml  cpp-lint.yml  test-workflow.yml
assets/: memory_module_api_overview.iuml
assets/i2c_module/: i2c_module_init.iuml  i2c_module_write_reg.iuml
assets/memoy_module/: memory_module_init.iuml  memory_module_read.iuml  memory_module_write.iuml
assets/sensor_module/: sensor_module_deinit.iuml  sensor_module_init.iuml  sensor_module_read.iuml
developers_guide/: index.html
docs/: developers_guide.md  developers_guide.rst  index.md  module_design.md  module_design.rst  requirements.md
docs/assets/: i2c_module_api_overview.iuml  i2c_module_call_sequence.iuml  memory_module_api_overview.iuml  memory_module_cal_sequence.iuml  sensor_module_api_overview.iuml  sensor_module_call_sequence.iuml
docs/assets/i2c_module/: i2c_module_check_device_address.iuml  i2c_module_deinit.iuml  i2c_module_read_bytes.iuml  i2c_module_read_reg.iuml  i2c_module_write_bytes.iuml
docs/assets/memoy_module/: memory_module_deinit.iuml  memory_module_erase.iuml  memoy_module_status.iuml
docs/ci/allure-report/: index.html
docs/ci/allure-results/: inject-requirements.py  results.xml
module_design/: index.html
requirements/: index.html
search/: search_index.json
src/ads7138/: ads7138.c  ads7138.h
src/ads7138/private/: ads7138_regs.h
src/bhi360/: bhi360.c  bhi360.h
src/bhi360/private/: bhi360_regs.h
src/bhi360_fusion/: bhi360_fusion.c  bhi360_fusion.h
src/bmm350/: bmm350.c  bmm350.h  bmm350_driver.c  bmm350_driver.h
src/bmm350/private/: bmm350_regs.h
src/common/: manikin_bit_manipulation.h  manikin_types.h
src/error_handler/: error_handler.c  error_handler.h
src/i2c/: i2c.c  i2c.h
src/packet_parser/: packet_parser.c  packet_parser.h
src/sample_timer/: sample_timer.c  sample_timer.h
src/sdp810/: sdp810.c  sdp810.h
src/sdp810/private/: sdp810_regs.h
src/spi/: spi.c  spi.h
src/vl53l4cd/: vl53l4cd.c  vl53l4cd.h
src/vl53l4cd/private/: vl53l4cd_regs.h
src/vl6180x/: vl6180x.c  vl6180x.h
src/vl6180x/private/: vl6180x_regs.h
src/w25qxx128/: w25qxx128.c  w25qxx128.h
src/w25qxx128/private/: w25qxx128_regs.h
template_configs/conf/: manikin_platform.h  manikin_software_conf.h
template_configs/hal_drivers/: manikin_error_functions.c  manikin_i2c_functions.h  manikin_tick.c  manikin_tick.h
template_configs/stm32f4/: CMakeLists.txt
template_configs/stm32f4/conf/: manikin_platform.h  manikin_software_conf.h
template_configs/stm32f4/hal_drivers/: manikin_i2c_functions.c  manikin_i2c_functions.h  manikin_timer_functions.c  manikin_timer_functions.h
template_configs/zephyr/hal_drivers/: manikin_error_functions.h  manikin_i2c_functions.c  manikin_tick.c
tests/: CMakeLists.txt
tests/ads7138/: ads7138_test.cpp  test_ads7138.cpp
tests/bmm350/: test_bmm350.cpp
tests/i2c/: i2c_test.cpp  test_i2c.cpp
tests/packet_parser/: test_packet_parser.cpp
tests/sdp810/: test_sdp810.cpp
tests/spi/: test_spi.cpp
tests/test_stubs/conf/: manikin_platform.h  manikin_software_conf.h
tests/test_stubs/mocks/: fake_i2c_functions.c  fake_i2c_functions.h  fake_spi_functions.c  fake_spi_functions.h  fake_timer_functions.c  fake_timer_functions.h  fake_timing_functions.c  fake_watchdog_functions.c  fake_watchdog_functions.h
tests/timer/: test_timer.cpp  timer_test.cpp
tests/vl53l4cd/: test_vl53l4cd.cpp
tests/vl6180x/: test_vl6180x.cpp  vl6180x_test.cpp
tests/w25qxx128/: test_w25qxx.cpp
zephyr/: module.yml
